2007-06-07  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/persistence.scm
	  Fix a problem that cannot check or fix efs database.
	  It's embugged at 2007-05-24.

2007-06-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-user.scm
	  Replace function names kahua-web-{adduser,deluser,lsuser}
	  with kahua-{adduser,deluser,lsuser}.
	  Command ls's output is now alphabetically sorted.

	* Change: src/kahua/server.scm
	  If a user is deactivated during login, he/she is immediately
	  logout.

2007-05-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* New: src/kahua-user.scm
	  New command-line user(<kahua-user> instances) management
	  tool.  This is imported from kahua-web CVS HEAD(0.3_pre10).

	* Change: src/kahua/user.scm
	  Export kahua-current-user-class.

2007-05-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-admin.scm, src/kahua-install.scm,
	          src/kahua-server.scm, src/kahua-shell.scm
	  Arrange code and purge usage of with-error-handler.
	  Replace them with guard macro.

2007-05-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: emacs/kahua.el.in
	  Compatibility with Emacs 21 (that doesn't have read-directory-name).

2007-05-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Context didn't have "x-kahua-remote-addr".

2007-05-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-keyserv.scm
	  Drop sending extra data to worker when a exception
	  raised while request handling.  This behavior caused
	  unexpected exception raising.

	* Fix: src/kahua/test/worker.scm
	  Lack of flush after send request to worker.

2007-05-25  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: skel/proj => skel/src directory
	* Change: src/kahua-package.scm, Makefile.in
	* Change: skel/Makefile.in
	  modify skel's source code directory tree.

2007-05-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-dbutil.scm
	  Add support for -S and -c command line options.